# SCLIReimagined

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.cpp
.github/: FUNDING.yml
include/commands/: TestCmd.hpp
include/commands/geometry/: Vector.hpp
include/core/: BaseCommand.hpp  Color.hpp  ConsoleProcess.hpp  Core.hpp  LogMessages.hpp  Logger.hpp  Page.hpp  Process.hpp
include/internal/: TestInternal.hpp
include/internal/util/: GeneralUtil.hpp
src/: CMakeLists.txt  main.cpp
src/commands/: CMakeLists.txt  TestCmd.cpp
src/commands/geometry/: Vector.cpp
src/core/: BaseCommand.cpp  CMakeLists.txt  Color.cpp  ConsoleProcess.cpp  Core.cpp  LogMessages.cpp  Logger.cpp  Page.cpp  Process.cpp  TestCore.cpp
src/internal/: CMakeLists.txt  internaltest.cpp
src/internal/util/: GeneralUtil.cpp
src/pages/: CMakeLists.txt  TestPage.cpp
